# webex-tui

./: .gitignore  .ignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONFIGURATION.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Readme.md  THEMING.md  Todo.md  bacon.toml  cliff.toml  flake-fenix.nix  flake.nix  justfile  rust-toolchain.toml  webex-tui.code-workspace
.github/workflows/: ci.yml  coverage.yml  release.yml  tag.yml  test.yml
examples/: config.yml  webex-tui-nix-config.nix
nix/: webex-tui-config.nix
spec/: 00-spec-template.md  01-room-selection-and-inactive-filter.md  02-theming.md  03-enhanced-search-and-selection.md
src/: banner.rs  config.rs  config.rs.backup  lib.rs  logger.rs  main.rs  tui.rs  ui.rs
src/app/: actions.rs  callbacks.rs  message_editor.rs  messages_list.rs  mod.rs  rooms_list.rs  rooms_pane.rs  state.rs  teams_store.rs  ui.rs
src/app/cache/: mod.rs  msg_thread.rs  persons.rs  room.rs  room_and_team_title.rs  room_content.rs  room_list_filter.rs  rooms.rs  teams.rs
src/app/state/: mod.rs  teams_store.rs
src/app/teams_store/: mod.rs  msg_thread.rs  room.rs  room_content.rs  room_list_filter.rs  room_list_order.rs  rooms.rs
src/inputs/: events.rs  handler.rs  key.rs  mod.rs  patch.rs
src/io/: handler.rs  mod.rs
src/io/webex_client/: auth.rs  mod.rs  wbx-main.rs
src/teams/: app_handler.rs  auth.rs  client.rs  mod.rs  token_cache.rs  webex_handler.rs
src/teams/store/: mod.rs
src/theme/: loader.rs  mod.rs  models.rs  parser.rs  tests.rs
src/ui/: editor.rs  help.rs  logs.rs  message_editor.rs  messages.rs  mod.rs  room_view.rs  rooms.rs  rooms_list.rs  style.rs  title.rs
src/webex/: sample.rs  wbx-main.rs
src/webex/auth/: mod.rs
themes/: default.yml  dracula.yml
