[package]
authors = ["Sam Grimee <sgrimee@gmail.com>"]
categories = ["command-line-utilities"]
description = "A minimalist terminal user interface for Cisco Webex Teams"
documentation = "https://github.com/sgrimee/webex-tui"
edition = "2021"
homepage = "https://github.com/sgrimee/webex-tui"
keywords = ["cisco", "webex", "tui", "cli", "terminal"]
license = "MIT OR Apache-2.0"
name = "webex-tui"
repository = "https://github.com/sgrimee/webex-tui"
version = "0.8.0"

[dependencies]
base64 = "0.22"
chrono = "0.4"
clap = { version = "4", features = ["cargo"] }
color-eyre = "0.6"
dirs = "6"
enum-iterator = "2"
fuzzy-matcher = "0.3"
gethostname = "0.5"
html2text = "0.15"
itertools = "0.14"
log = "0.4"
oauth2 = { version = "5", features = ["reqwest"] }
open = "5"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
textwrap = "0.16"
thiserror = "1.0"
tokio = { version = "1.43.1", features = ["rt", "macros"] }
webbrowser = "1.0.1"
# webex = "0.10.0"
webex = { git = "https://github.com/sgrimee/webex-rust.git", rev = "657868a3f447e3a26f9a0b73104ee7eebcd7c207" }
# webex = { git = "https://github.com/Nabushika/webex-rust.git", branch = "master"}
# webex = { path = "../webex-rust" }

# UI dependencies - allow latest compatible versions
crossterm = "0.28"
ratatui = "0.29"
tui-logger = "0.14"
tui-textarea = "0.7"

[dev-dependencies]
rstest = "0.24.0"
tempfile = "3.0"
